# PlaydateRustTemplate

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  Rakefile
Source/: main.lua  pdxinfo
src/: bindings.rs  bridge.c  lib.rs
